fix(action, action-group): alignment center when enclosed within group (grid layout, text-enabled vs no text) (#3929)
* demo for alignment center when enclosed within group (grid layout)

* fix(action): tailwind horizontal center

* added screener for grid centering of actions in a group

* minor adjustments to story

* fixed typo

* change attribute name

* add for text-enabled vs no text for more clarity

* specify flex-grow on the button to fill the container

* update action stories to not set width on a container

* revert the change

--- a/src/components/calcite-action/calcite-action.scss
+++ b/src/components/calcite-action/calcite-action.scss
@@ -24,6 +24,7 @@
     w-auto;
   font-family: inherit;
   text-align: unset;
+  flex: 1 0 auto;
   &:hover {
     @apply bg-foreground-2 text-color-1 fill-color-1;
   }
